# magic-hat

./: Anchor.toml  magic_hat.json
lib/common/: Cargo.toml
lib/common/src/: errors.rs
programs/magic-hat/: Cargo.toml
programs/magic-hat/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs  wallet_whitelist.rs  whitelist_config.rs  whitelist_errors.rs
programs/magic-hat/src/processor/: add_config_lines.rs  initialize.rs  mint.rs  mod.rs  update.rs  whitelist_mint.rs  withdraw.rs
programs/magic-hat/src/processor/collection/: remove_collection.rs  set_collection.rs  set_collection_during_mint.rs
programs/magic-hat/src/whitelist_config_instructions/: create_whitelist_config.rs  delete_whitelist_config.rs  mod.rs  update_whitelist_config.rs
programs/magic-hat/src/whitelist_instructions/: create_whitelist_account.rs  decrease_whitelist_count.rs  delete_whitelist_account.rs  mod.rs
tests/: magic-hat.ts
